[package]
name = "pubg_controller"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
obfstr = { workspace = true }
nalgebra = { workspace = true }
raw_struct = { workspace = true }

pubg = { path = "../pubg" }
utils-state = { path = "../utils/state" }
utils-console = { path = "../utils/console" }
utils-windows = { path = "../utils/windows" }

once_cell = "1.19"

[build-dependencies]
winres = "0.1"
chrono = "0.4.26"
