[package]
name = "pubg_controller_overlay"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
imgui = { version = "0.12", features = ["tables-api"] }
obfstr = { workspace = true }
nalgebra = { workspace = true }
raw_struct = { workspace = true }
mint = { workspace = true }
winit = { workspace = true }

overlay = { path = "../overlay" }
pubg = { path = "../pubg" }
utils-state = { path = "../utils/state" }
utils-console = { path = "../utils/console" }
utils-windows = { path = "../utils/windows" }

serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
serde_with = "3.8.3"

libloading = "0.8.6"
once_cell = "1.19"
rand = { version = "0.8.5", features = ["std"] }

[build-dependencies]
winres = "0.1"
chrono = "0.4.26"
