[package]
name = "image_dumper"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
obfstr = { workspace = true }

pubg = { path = "../pubg" }
utils-state = { path = "../utils/state" }
utils-console = { path = "../utils/console" }

[target.'cfg(target_os = "windows")'.dependencies]
utils-windows = { path = "../utils/windows" }

once_cell = "1.19"

[build-dependencies]
chrono = "0.4.26"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
